--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -62,6 +62,7 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem;
+  width: 100%;
 }
 
 // .post-comments {
